# cim

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: Releases.yml  linux.yml  windows.yml  winget.yml
images/: python_tiff.tiff
src/: main.rs
src/animations/: mod.rs  spinners.rs  styles.rs
src/commands/: base.rs  command.rs  manager.rs  mod.rs
src/commands/parsers/: mod.rs  path.rs
src/conversion/: image_to_jpg.rs  image_to_png.rs  image_to_webp.rs  load_any_image.rs  load_image.rs  load_svg.rs  load_webp.rs  main.rs  mod.rs  rgba2rgb.rs  save_as_format.rs  save_as_webp.rs  svg_to_png.rs
src/conversion/utils/: load_any_image.rs  load_image.rs  load_svg.rs  load_webp.rs  save_as_format.rs  save_as_webp.rs
src/formats/: mod.rs  supported.rs
src/formats/validate/: input.rs  mod.rs
src/open/: common.rs  mod.rs  svg.rs
src/save/: common.rs
src/tools/: files.rs  format.rs  mod.rs  paths.rs
wix/: main.wxs
