[package]
name = "cim"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"
authors = ["feraxhp"]
description = "A simple CLI tool to convert between image formats"

[dependencies]
image = "0.25.2"
webp = "0.3.0"
resvg = "0.45.0"
color-print = "0.3.7"
tiny-skia = "0.11.4"
clap = { version = "4.5.16", features = ["cargo"] }
path-absolutize = "3.1.1"


[package.metadata.generate-rpm]
url="https://github.com/feraxhp/cim"
assets = [
    { source = "target/release/cim", dest = "/usr/bin/cim", mode = "755" },
]

[package.metadata.deb]
depends="$auto"
assets = [
    ["target/release/cim", "usr/bin/", "755"],
]