[package]
name = "cim"
version = "0.2.0-alpha"
edition = "2024"
license = "MIT"
authors = ["feraxhp <feraxhp+gh@gmail.com>"]
description = "A simple CLI tool to convert between image formats"
homepage = "https://github.com/feraxhp/cim"

[dependencies]
rand = "0.9.2"
webp = "0.3.0"
image = "0.25.2"
resvg = "0.45.0"
futures = "0.3.31"
tiny-skia = "0.11.4"
indicatif = "0.18.0"
color-print = "0.3.7"
path-absolutize = "3.1.1"
clap = { version = "4.5.60", features = ["cargo"] }
tokio = { version = "1.47.1", features = ["full", "rt", "rt-multi-thread", "macros"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.generate-rpm]
url="https://github.com/feraxhp/cim"
assets = [
    { source = "target/release/cim", dest = "/usr/bin/cim", mode = "755" },
]

[package.metadata.deb]
depends="$auto"
assets = [
    ["target/release/cim", "usr/bin/", "755"],
]
